@@ -1,6 +1,7 @@
 From ucommon 1.9.7 to ???
 - new NamedTree listing methods for moving and re-ordering tree branches.
 - getIndexed methods for accessing a linked list by index.
+- some clarification of internet socket address types.
 
 From ucommon 1.9.6 to 1.9.7
 - lots of code cleanup for final release candidate for 2.0.
